--- a/SIRELAB-UC/SIRELAB-UC-war/web/login.xhtml
+++ b/SIRELAB-UC/SIRELAB-UC-war/web/login.xhtml
@@ -48,7 +48,7 @@
                     </p:password>
 
                     <p:commandLink value="¿Olvido su contraseña?" style="position: absolute; top: 130px; left: 20px"/>
-                    <p:commandButton value="Aceptar" style="position: absolute; top: 120px; left: 220px"  process="@this"/>
+                    <p:commandButton value="Aceptar" style="position: absolute; top: 120px; left: 220px"  process="@this" action="menuinicial"/>
                     <p:commandButton value="Cancelar" style="position: absolute; top: 120px; left: 300px" process="@this" onclick="loginUsuario.hide()"/> 
 
                 </p:dialog>
